--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                     </div>
                 </div>
                 <p class="text-lg italic pt-4 max-w-xl text-center">
-                    **Análisis ICA:** Este costo es favorable, realista e incluye un 20% de ganancia de supervisión y una reserva del 7% para imprevistos.
+                    Propuesta integral ICA: incluye margen operativo (20%) y reserva técnica (7%) para imprevistos.
                 </p>
             </section>
         </div>
